<resources>
    <string name="app_name">ForestBoundaries</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="owner_text">Dono</string>
    <string name="description_text">Descrição</string>
    <string name="marker_text">Lat e Lon do primeiro marco</string>
    <string name="create_new_prop">Criar novo propriedade</string>
    <string name="settings_action">Definições</string>
    <string name="owner_spinner_label">Dono:</string>
    <string name="description_hint">pequena descrição e localização</string>
    <string name="spprox_size_hint">área aprox.</string>
    <string name="submit_new_prop">Submeter</string>
    <string name="instructions_new_prop">Após submeter podes recolher localização de marcos</string>
    <string name="description_error">A descrição não pode estar vazia!</string>
    <string name="edit_prop">Editar</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_new_marker_b">Novo marco</string>
    <string name="locate_later_b">Agora não</string>
    <string name="locate_finished_b">Guardar</string>
    <string name="save_marker_locate">Guardar marco</string>
    <string name="close_polyline">Fechar Linha</string>
    <string name="print_prop">Imprimir</string>
    <string name="locate_marker">marcar in situ</string>
    <string name="create_new_marker_in_situ">Novo Marco</string>
    <string name="save_marker_in_situ">Guardar Marco</string>
    <string name="close_polyline_in_situ">Fechar Linha</string>
    <string name="save_in_situ">Guardar</string>
    <string name="edit_markers">Editar marcos</string>
    <string name="delete_marker_locate">Apagar marco</string>
    <string name="property_detail_activity">Detalhe</string>
    <string name="create_new_prop_activity">Definir nova propriedade</string>
    <string name="locate_prop_activity">Localizar Propriedade</string>
    <string name="mark_in_situ_activity">Marcar in situ</string>
    <string name="edit_markers_activity">Editar</string>
    <string name="year_of_plantation">Ano the plantação</string>
    <string name="type_of_use">Tipo de uso</string>
    <string name="year_of_last_cut">Ano de último corte</string>
    <string name="year_and_month_of_last_cleaning">Ano e mês da última limpeza</string>
    <string name="type_spinner_hint">tipo de uso</string>
    <string name="year_of_plantation_hint">Ano de plantação</string>
    <string name="year_of_last_cut_hint">ano de último corte</string>
    <string name="year_of_last_clean_hint">ano</string>
    <string name="month_of_last_clean_hint">mês</string>
    <string name="save_action">Guardar</string>
    <string name="note_hint">observações</string>
    <string name="test">teste</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="add_owner">Adicionar Propriertário</string>
    <string name="create_owner">Novo Proprietário</string>
    <string name="owner_name">Nome</string>
    <string name="owner_email">E-mail</string>
    <string name="owner_password">Password</string>
    <string name="owner_name_error">O nome não pode estar vazio</string>
    <string name="owner_email_error">indique um email valido</string>
    <string name="owner_password_error">A password não pode estar vazia</string>
    <string name="owner_email_already_exists_error">O email que indicou já está a ser usado</string>

    <string-array name="land_uses">
        <item></item> <!--placehoder for hint.-->
        <item>Eucaliptal</item>
        <item>Pinhal</item>
        <item>Florestal - outro</item>
        <item>Agrícola</item>
        <item>outro</item>
    </string-array>
    <string-array name="months">
        <item>hint</item>
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Marco</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
</resources>
