<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_spinner_label"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/owner_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/description_hint"/>

    <EditText
        android:id="@+id/approx_size_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/spprox_size_hint"/>

    <Button
        android:id="@+id/submit_new_prop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_new_prop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_new_prop"/>

</LinearLayout>
