<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/prop_name_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/create_new_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_marker_b"/>

    <Button
        android:id="@+id/locate_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locate_later_b"/>

    <FrameLayout
        android:id="@+id/map_container_locate"
        android:layout_width="match_parent"
        android:layout_height="250dp">
    </FrameLayout>

    <Button
        android:id="@+id/save_marker_locate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_marker_locate"/>

    <Button
        android:id="@+id/close_polyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_polyline"/>

    <Button
        android:id="@+id/save_locate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locate_finished_b"/>

</LinearLayout>
