<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/edit_prop"
        android:title="@string/edit_prop"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/print_prop"
        android:title="@string/print_prop"
        android:icon="@drawable/ic_print_black_24dp"
        android:orderInCategory="99"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings_action"
        android:title="@string/settings_action"
        android:orderInCategory="1"
        app:showAsAction="never"/>
</menu>