<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/owner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_text" />
    <TextView
        android:id="@+id/owner_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_text"/>
    <TextView
        android:id="@+id/description_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    <TextView
        android:id="@+id/marker_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_text"/>
    <TextView
        android:id="@+id/marker_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

</LinearLayout>
